Fixes very long addresses overflowing the notifications box

--- a/shared-data/default-theme/css/default.css
+++ b/shared-data/default-theme/css/default.css
@@ -6288,10 +6288,6 @@ div.motd a.motd-signed {
   line-height: 14px;
   color: #ffffff;
 }
-/* Body */
-body {
-  overflow: hidden;
-}
 /* Content */
 #content {
   position: fixed;
