--- a/shared-data/default-theme/less/app/global.less
+++ b/shared-data/default-theme/less/app/global.less
@@ -1,9 +1,3 @@
-/* Body */
-
-  body {
-    overflow: hidden;
-  }
-
 /* Content */
 
   #content {
